# pytraj

./: .coverage  .gitignore  .travis.yml  0.sh  CMakeLists.txt  DEVELOPMENT.md  Jenkinsfile  MANIFEST.in  Makefile  PYXLIST.txt  README.md  README.rst  TODO_Amber.txt  appveyor.yml  bugs.txt  changes.rst  circle.yml  clean_cythonize_files.py  conda-requirements.txt  docker.txt  environment.yml  index.html  install.rst  install.txt  install_taba.nogit.sh  meta.yaml  params.json  performance_tips.txt  pip-requirements.txt  pyxlist.txt  run_tests.py  runtests.py  setup.cfg  setup.py  setup_test_0.py  test_setup.py  versions.json
Ambertools/: setup_for_Amber.py
Docs/: README
base_setup/: __init__.py  base_setup.py  build_config.py  extension_builder.py  platform_utils.py  setup.py
bk/: Topology.pyx
ci_support/: run_docker_build.sh
conda_recipe/: meta.yaml
contributors/: cpptraj.md  pycpptraj.txt  pytraj.rst  pytraj.txt
css/: index.css
development/: build_docs.txt  pytraj.txt
devtools/: CpptrajDevlopmentGuide.lyx  DEVELOPMENT.md  README.txt  TODO.md  bugs.txt  build_all_wheels.sh  developer_guide.rst  mkrelease  pytraj.txt  tips.txt  todo_amber.txt
doc/: 0readme  Makefile  README  README.md  mybinder.html
doctrees/: analysis_dssp.doctree  analysis_hbond.doctree  atom_selection.doctree  basic_examples.doctree  developer_guide.doctree  environment.pickle  faq.doctree  index.doctree  installation.doctree  load_file.doctree  misc.doctree  parallel.doctree  slice.doctree  trajectory.doctree  whatsnew.doctree
examples/: 0readme  API_test.py  API_test_2.py  API_test_3.py  README.md  Randomize_ions.py  Running_multiple_actions_0.py  TestList.sh  calc_GDTscore.py  calc_pairwise_distance.py  dihedral.py  energy_decomposition.py  example_Amber_to_CHARMM.py  example_append_traj_and_write.py  example_autocorrelation.py  example_average_structure.py  example_bfactors.py  example_calc_protein_score.py  example_calculate_chi_angle.py  example_center_of_geometry.py  example_center_of_mass.py  example_cpptraj_style.py  example_density.py  example_distance.py  example_distance_matrix.py  example_dssp.py  example_energy_decomposition.py  example_fancy_indexing_traj.py  example_get_atom_mass.py  example_hydrogen_bonding.py  example_kmeans_sklearn.py  example_load_REMD_trajectory.py  example_load_coordinates_with_low_memory.py  example_load_file_from_url.py  example_load_filelist.py  example_load_mol2_as_trajectory.py  example_load_pdb_as_trajectory.py  example_load_pdb_from_rcsb.py  example_load_trajectory_and_rmsd.py  example_load_trajectory_by_chunk.py  (+56 more)
for_travis/: Makefile  fake_test.py  install_cpptraj.sh
html/: analysis_hbond.html  atom_selection.html  genindex.html  misc.html  parallel.html  search.html  searchindex.js  slice.html  trajectory.html  whatsnew.html
installs/: .nfs0000000012388d72000001fb  README  check_openmp.py  install_cpptraj.sh  install_cpptraj.travis.sh  install_cpptraj_current_folder.sh  install_cpptraj_git.sh  install_cpptraj_git_nonetcdf.sh  install_cpptraj_nonetcdf.sh  libcpptraj.txt  pytraj.txt
latest/: .buildinfo  analysis.html  analysis_dssp.html  analysis_hbond.html  api.html  atom_mask_selection.html  conda.html  cookbook.html  design_trajectory.html  developer_guide.html  dihedral_analysis.html  dssp_analysis.html  ecosystem.html  energy_analysis.html  faq.html  five_minutes.html  general_concept.html  genindex.html  hbond_analysis.html  index.html  installation.html  julia.html  load_cpptrajstate.html  load_file.html  matrix_analysis.html  mdtraj_adapted.html  misc.html  modify_traj.html  mybinder.html  ngl_example.html  ngl_player.html  nmr.html  nucleic_acid.html  nucleic_acid_analysis.html  objects.inv  overview.html  parallel.html  parallel_benchmark_evaluated.ipynb  py-modindex.html  read_and_write.html  (+20 more)
licenses/: README  pytraj.md  pytraj.txt
log/: TODO.md  github_errors.txt  github_tips.txt  log.txt  pip_log.txt
note-books/: Analysis_rms2d.ipynb  DSSP_tutorial.ipynb  FAQ.ipynb  Frame.ipynb  Frame_class.py  InstallTest.ipynb  README  README.md  Topology.ipynb  Trajectory.ipynb  analysis_rms2d.ipynb  animation_0.html  animation_0.ipynb  atom_mask_selection.ipynb  calc_energies_pysander.ipynb  clustering.ipynb  dataset.ipynb  dataset_in_pytraj.ipynb  dssp_tutorial.ipynb  energy_decomposition.ipynb  extract_temperature_traj_remd.ipynb  fancy_indexing.ipynb  hbond_0.ipynb  index.ipynb  install_test.ipynb  interface_with_other_packages.ipynb  iterload.ipynb  jcoupling_calc.ipynb  load_a_list_of_files.ipynb  load_cpptraj_file_for_laziness.ipynb  load_cpptraj_input.ipynb  load_pdb_from_rcsb.ipynb  load_remd_traj.ipynb  manual.txt  memory_comparison.ipynb  multidihedral_analysis.ipynb  multiple_analysises.ipynb  numpy_interface.ipynb  parallel_ipython.ipynb  performance_tips.ipynb  (+12 more)
pytraj/: ActionList.cpp  ActionList.pxd  ActionList.pyx  AnalysisList.cpp  AnalysisList.pxd  AnalysisList.pyx  ArgList.cpp  ArgList.pxd  ArgList.pyx  Array1D.pxd  ArrayIterator.pxd  Atom.cpp  Atom.pxd  Atom.pyx  AtomMap.cpp  AtomMap.pxd  AtomMap.pyx  AtomMask.cpp  AtomMask.pxd  AtomMask.pyx  AtomSelect.py  BaseIOtype.cpp  BaseIOtype.pyx  Box.cpp  Box.pxd  Box.pyx  BufferedFrame.pyx  ClusterList.pyx  Command.cpp  Command.pxd  Command.pyx  ComplexArray.pxd  Constants.pxd  CoordinateInfo.cpp  CoordinateInfo.pyx  Corr.pxd  CpptrajFile.cpp  CpptrajFile.pxd  CpptrajFile.pyx  CpptrajState.cpp  (+242 more)
release/: index.html
scripts/: Install_single_file.sh  Out.py  Usage.py  _fix_action.py  acsii_art.py  add_cythonized_files.py  assert_no_errors.py  base_setup.py  basesetup.py  build_wheel.py  change_name.py  check_libs.py  check_list_headers.py  check_openmp.py  (+57 more)
(+3958 files in other folders)
